--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["tyanakaz"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pandas = "^1.0.3"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
