--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["tyanakaz"]
 python = "^3.8"
 pandas = "^1.0.3"
 jupyter = "^1.0.0"
+selenium = "^3.141.0"
 
 [tool.poetry.dev-dependencies]
 
