--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 pandas = "^1.0.3"
 jupyter = "^1.0.0"
 selenium = "^3.141.0"
+oandapyV20 = "^0.6.3"
 
 [tool.poetry.dev-dependencies]
 
