--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^1.0.3"
 jupyter = "^1.0.0"
 selenium = "^3.141.0"
 oandapyV20 = "^0.6.3"
+matplotlib = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 
