--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -11,6 +11,8 @@ jupyter = "^1.0.0"
 selenium = "^3.141.0"
 oandapyV20 = "^0.6.3"
 matplotlib = "^3.2.1"
+pandas_datareader = "^0.9.0"
+mpl_finance = "^0.10.1"
 
 [tool.poetry.dev-dependencies]
 
